<resources>
    <string name="app_name">garbageCAN</string>
    <string name="camera_general_error">error</string>

    <!--Camera Fragment-->
    <string name="flash_toggle">Flash Toggle</string>
    <string name="preview">Preview</string>
    <string name="take_photo_button">Take Photo Button</string>
    <string name="approve_button">Approve Button</string>
    <string name="add_photo_button">Add Photo Button</string>
    <string name="flash_button">Flash Button</string>
    <string name="thank_you_message">Thank you</string>
    <string name="restart">restart</string>
    <string name="exit">exit</string>
    <string name="preview_of_taken_photo">Preview of taken photo</string>
    <string name="settings_button">Settings Button</string>

    <!--Settings fragment-->
    <string name="wifi_only">Only upload photos over WiFi</string>
    <string name="charge_only">Only upload photos while charging</string>
    <string name="usage_reports">Send us anonymous usage reports to help us improve our app</string>
    <string name="upload_question_title">When should I upload photos?</string>
    <string name="other_title">Other:</string>
    <string name="show_upload_history">Show upload History</string>
    <string name="show_history_arrow_button">show_history_arrow_button</string>
    <string name="history_toolbar_text_view">History</string>
    <string name="additional_info_toolbar_text_view">Additional Info</string>
    <string name="update_photo_details_button">Update Photo details</string>
    <string name="additional_info_here_hint">Additional_info_here</string>
    <string name="taken_photo_preview">Taken Photo Preview</string>
    <string name="settings_toolbar_text_view">Settings</string>
    <string name="click_here_to_send_additional_info"><![CDATA[Click here to send additional info ->]]></string>
    <string name="delete_all_button">Delete All</string>
    <string name="time">Time:</string>
    <string name="location">Location:</string>
    <string name="history_image_preview">History Image Preview</string>
    <string name="delete_button">Delete Button</string>
    <string name="last_taken_photo">Last Taken Photo</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="all_permissions_apology">All permissions are required to use this app, we are sorry for the inconvenience.</string>
    <string name="goodbye">Goodbye</string>
    <string name="email_address">eMail address</string>
    <string name="please_enter_your_email_to_signup">please enter your name and eMail address.</string>
    <string name="name">Name</string>
    <string name="send">SEND</string>


</resources>
