<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/time_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@+id/time_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="20/12/1212 23:23:23" />


    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_label" />


    <TextView
        android:id="@+id/location_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@+id/location_label"
        app:layout_constraintTop_toBottomOf="@+id/time_label"
        tools:text="32.23232,32.232323" />

    <ImageView
        android:id="@+id/history_image_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:contentDescription="@string/history_image_preview"
        android:src="@drawable/common_google_signin_btn_icon_light_focused"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/delete_image_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/delete_image_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/delete_button"
        android:padding="16dp"
        android:src="@drawable/ic_delete_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap" />
</android.support.constraint.ConstraintLayout>