<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="#000000">

    <com.sillyv.garbagecan.util.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/flash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/flash_button"
        android:src="@drawable/ic_flash_off_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/settings_button"
        android:src="@drawable/ic_settings_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/green_progress"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/flash_button"
        android:src="@drawable/ic_flash_off_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/happy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_happy_green"
        android:theme="@style/happy_fab"
        app:layout_constraintBottom_toBottomOf="@+id/meh_button"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/meh_button"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/meh_button" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/meh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_meh_yellow"
        android:theme="@style/meh_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/sad_button"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/happy_button" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/sad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sad_red"
        android:theme="@style/sad_fab"
        app:layout_constraintBottom_toBottomOf="@+id/meh_button"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/meh_button"
        app:layout_constraintTop_toTopOf="@+id/meh_button" />


    <ImageView
        android:id="@+id/small_preview_of_taken_photo"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="32dp"
        android:contentDescription="@string/last_taken_photo"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/sad_button"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/small_preview_of_taken_photo_hint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/click_here_to_send_additional_info"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/small_preview_of_taken_photo"
        app:layout_constraintEnd_toStartOf="@+id/small_preview_of_taken_photo"
        app:layout_constraintTop_toTopOf="@+id/small_preview_of_taken_photo" />
</android.support.constraint.ConstraintLayout>


